# ct-gmarl

./: .gitignore  README.md  pyproject.toml  train.py
.github/workflows/: ci.yml
conf/: config.yaml  research_ablation_gamma.yaml  research_ablation_no_gat.yaml  research_ablation_no_ode.yaml  research_eval_sim2real_100.yaml  research_train_ctg_100.yaml  research_train_qmix_100.yaml  research_train_rmappo_100.yaml
conf/algorithm/: ct_gmarl.yaml  qmix.yaml  rmappo.yaml
conf/model/: ct_gmarl.yaml
src/engine/: buffer.py  manager.py  optimizer.py  runner.py  suite.py  telemetry.py
src/models/: __init__.py  base.py  factory.py
src/models/baselines/: __init__.py  qmix.py  rmappo.py
src/models/ct_gmarl/: __init__.py  agent.py  ct_gmarl_model.py  gat_processor.py  graph_attention.py  ode_engine.py  ode_rnn.py
src/utils/: config_loader.py  logger.py  metric_exporter.py  seed.py
