[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ct_gmarl"
version = "0.1.0"
description = "Research repository for Continuous-Time Graph MARL in NetForge_RL"
authors = [
    { name = "Igor Jankowski", email = "igorjankowwski@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchdiffeq>=0.2.3",
    "wandb>=0.16.0",
    "docker>=7.0.0",
    "scikit-learn>=1.4.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "numpy>=2.0.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "gymnasium>=0.29.1",
    "pettingzoo>=1.24.3",
    "networkx>=3.2.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "jupyter>=1.0.0",
]
nlp = [
    "sentence-transformers>=2.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "N"]
ignore = ["E501"] # Line length handled by formatter
